--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
       <section class="hero">
         <div class="container hero__container">
           <header class="header">
-            <img src="./images/Icons/logo.svg" alt="surboard logo" class="logo">
+            <div class="logo">
+              <img src="./images/Icons/logo.svg" alt="surboard logo" class="logo__icon">
+            </div>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item"> <a href="#" class="menu__link">О нас </a> </li>
@@ -205,7 +207,7 @@
                 </label>
               </div>
               <div class="form__controls">
-                <label class="radio">
+                <label class="radio form__controls-radio">
                   <input type="radio" name="option" class="radio__elem">
                   <div class="radio__visible"></div>
                   <div class="radio__title">Оплата наличными</div>
