--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <meta name="viewport" content="width=1100">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Surfboard</title>
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -27,11 +27,16 @@
                 <li class="menu__item"> <a href="#" class="menu__link">Контакты</a> </li>
               </ul>
             </nav>
-            <a href="tel:+78009039090" class="phone-number">
+            <a href="tel:+78009039090" class="phone-number header__phone-number">
               <span class="phone-number__icon">
                 <img src="./images/Icons/phone.svg" alt="phone icon" class="phone-number__icon">
               </span>
               <span class="phone-number__text">8 800 903 90 90</span>
+            </a>
+            <a href="#" class="hamburger">
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
+              <span class="hamburger__plank"></span>
             </a>
           </header>
           <div class="hero__title-section">
@@ -164,7 +169,7 @@
           <h2 class="section__title order-section__title">Закажите доску</h2>
           <form class="form">
             <div class="form__col">
-              <div class="form__row">
+              <div class="form__row form__row--margin-bottom__decrease">
                 <label class="form__block">
                   <div class="form__title">Имя</div>
                   <input type="text" class="form__input">
@@ -200,7 +205,7 @@
               </div>
             </div>
             <div class="form__col">
-              <div class="form__row">
+              <div class="form__row form__row--margin-bottom__rise">
                 <label class="form__block">
                   <div class="form__title">Комментарий</div>
                   <textarea class="form__input form__input--textarea"></textarea>
@@ -232,6 +237,38 @@
             </div>
           </form>
         </div>
+      </section>
+      <section class="section map-section">
+        <footer class="footer">  
+          <div class="container footer__container">
+            <address class="contacts">
+              <div class="contacts__place">Москва, ул.Новый Арбат, д.31.12</div>
+              <a href="tel:+78009039090" class="phone-number">88009039090</a>
+            </address>
+            <ul class="socials">
+              <li class="social__item social__item--vk-icon">
+                <a href="#" class="social__link">
+                  <img src="./images/Icons/socials/vk.svg" alt="vk icon" class="socials__icon">
+                </a>
+              </li>
+              <li class="social__item social__item--fb-icon">
+                <a href="#" class="social__link">
+                  <img src="./images/Icons/socials/fb.svg" alt="fb icon" class="socials__icon">
+                </a>
+              </li>
+              <li class="social__item social__item--in-icon">
+                <a href="#" class="social__link">
+                  <img src="./images/Icons/socials/in.svg" alt="in icon" class="socials__icon">
+                </a>
+              </li>
+              <li class="social__item social__item--tw-icon">
+                <a href="#" class="social__link">
+                  <img src="./images/Icons/socials/tw.svg" alt="tw icon" class="socials__icon">
+                </a>
+              </li>
+            </ul>
+          </div>
+        </footer>
       </section>
     </div>
   </div>
