--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
             <ul class="features">
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/Icon1.svg" alt="surfboard icon">
+                  <img src="./images/Icons/surboard.svg" alt="surfboard icon">
                 </div>
                 <div class="feature__text">Уникальный дизайн</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/Icon2.svg" alt="surfboard icon">
+                  <img src="./images/Icons/desktop.svg" alt="desktop icon">
                 </div>
                 <div class="feature__text">Прочные материалы</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/Icon3.svg" alt="surfboard icon">
+                  <img src="./images/Icons/car.svg" alt="car icon">
                 </div>
                 <div class="feature__text">Быстрая доставка</div>
               </li>
@@ -248,22 +248,22 @@
             <ul class="socials">
               <li class="social__item social__item--vk-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/socials/vk.svg" alt="vk icon" class="socials__icon">
+                  <img src="./images/Icons/vk.svg" alt="vk icon" class="socials__icon">
                 </a>
               </li>
               <li class="social__item social__item--fb-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/socials/fb.svg" alt="fb icon" class="socials__icon">
+                  <img src="./images/Icons/fb.svg" alt="fb icon" class="socials__icon">
                 </a>
               </li>
               <li class="social__item social__item--in-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/socials/in.svg" alt="in icon" class="socials__icon">
+                  <img src="./images/Icons/in.svg" alt="in icon" class="socials__icon">
                 </a>
               </li>
               <li class="social__item social__item--tw-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/socials/tw.svg" alt="tw icon" class="socials__icon">
+                  <img src="./images/Icons/tw.svg" alt="tw icon" class="socials__icon">
                 </a>
               </li>
             </ul>
