--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             </nav>
             <a href="tel:+78009039090" class="phone-number header__phone-number">
               <span class="phone-number__icon">
-                <img src="./images/Icons/phone.svg" alt="phone icon" class="phone-number__icon">
+                <svg class="phone-icon">
+                  <use xlink:href="./sprite.svg#phone"></use>
+                </svg>
               </span>
               <span class="phone-number__text">8 800 903 90 90</span>
             </a>
@@ -48,19 +50,25 @@
             <ul class="features">
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/surboard.svg" alt="surfboard icon">
+                  <svg class="surfboard-icon">
+                    <use xlink:href="./sprite.svg#surfboard"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">Уникальный дизайн</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/desktop.svg" alt="desktop icon">
+                  <svg class="desktop-icon">
+                    <use xlink:href="./sprite.svg#desktop"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">Прочные материалы</div>
               </li>
               <li class="features__item feature">
                 <div class="feature__icon">
-                  <img src="./images/Icons/car.svg" alt="car icon">
+                  <svg class="car-icon">
+                    <use xlink:href="./sprite.svg#car"></use>
+                  </svg>
                 </div>
                 <div class="feature__text">Быстрая доставка</div>
               </li>
@@ -79,7 +87,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./images/Icons/person.svg" alt="person icon" class="benefit__icon">
+                  <svg class="person-icon">
+                    <use xlink:href="./sprite.svg#person"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -94,7 +104,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./images/Icons/material.svg" alt="material icon" class="benefit__icon">
+                  <svg class="material-icon">
+                    <use xlink:href="./sprite.svg#material"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -109,7 +121,9 @@
             <li class="benefits__item benefit">
               <div class="benefit__image">
                 <div class="benefit__image-wrapper">
-                  <img src="./images/Icons/surf.svg" alt="surf icon" class="benefit__icon">
+                  <svg class="surf-icon">
+                    <use xlink:href="./sprite.svg#surf"></use>
+                  </svg>
                 </div>
               </div>
               <div class="benefit__text">
@@ -179,7 +193,7 @@
                   <input type="text" placeholder="89022348912" class="form__input">
                 </label>
               </div>
-              <div class="form__row">
+              <div class="form__row form__row--margin-bottom__hight">
                 <label class="form__block">
                   <div class="form__title">Улица</div>
                   <input type="text" class="form__input">
@@ -243,27 +257,35 @@
           <div class="container footer__container">
             <address class="contacts">
               <div class="contacts__place">Москва, ул.Новый Арбат, д.31.12</div>
-              <a href="tel:+78009039090" class="phone-number">88009039090</a>
+              <a href="tel:+78009039090" class="footer__phone-number">88009039090</a>
             </address>
             <ul class="socials">
               <li class="social__item social__item--vk-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/vk.svg" alt="vk icon" class="socials__icon">
+                  <svg class="vk-icon">
+                    <use xlink:href="./sprite.svg#vk"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item social__item--fb-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/fb.svg" alt="fb icon" class="socials__icon">
+                  <svg class="fb-icon">
+                    <use xlink:href="./sprite.svg#fb"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item social__item--in-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/in.svg" alt="in icon" class="socials__icon">
+                  <svg class="in-icon">
+                    <use xlink:href="./sprite.svg#in"></use>
+                  </svg>
                 </a>
               </li>
               <li class="social__item social__item--tw-icon">
                 <a href="#" class="social__link">
-                  <img src="./images/Icons/tw.svg" alt="tw icon" class="socials__icon">
+                  <svg class="tw-icon">
+                    <use xlink:href="./sprite.svg#tw"></use>
+                  </svg>
                 </a>
               </li>
             </ul>
