--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </nav>
             <a href="tel:+78009039090" class="phone-number header__phone-number">
               <span class="phone-number__icon">
-                <svg class="phone-icon">
+                <svg class="phone-icon phone-icon--color--white">
                   <use xlink:href="./sprite.svg#phone"></use>
                 </svg>
               </span>
@@ -257,7 +257,14 @@
           <div class="container footer__container">
             <address class="contacts">
               <div class="contacts__place">Москва, ул.Новый Арбат, д.31.12</div>
-              <a href="tel:+78009039090" class="footer__phone-number">88009039090</a>
+              <a href="tel:+78009039090" class="phone-number footer__phone-number">
+                <span class="phone-number__icon">
+                  <svg class="phone-icon phone-icon--color--black">
+                    <use xlink:href="./sprite.svg#phone"></use>
+                  </svg>
+                </span>
+                <span class="phone-number__text">8 800 903 90 90</span>
+              </a>
             </address>
             <ul class="socials">
               <li class="social__item social__item--vk-icon">
