--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
       </svg>
     </a>
     <nav class="menu menu--vertical">
-      <ul class="menu__list">
+      <ul class="menu__list vertical">
         <li class="menu__item"> <a href="#" class="menu__link">О нас </a> </li>
         <li class="menu__item"> <a href="#" class="menu__link">Серфобры</a> </li>
         <li class="menu__item"> <a href="#" class="menu__link">Команда</a> </li>
