--- a/index.html
+++ b/index.html
@@ -230,40 +230,183 @@
           </div>
         </div>
       </section>
+      <section class="section team-section">
+        <div class="container">
+          <h2 class="section__title section__title--team">Команда</h2>
+          <ul class="team team--version--desktop">
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./images/avatars/borya.png" alt="borya" class="team__member-icon">
+              </div>
+              <button class="team__title" type="button">Борис Федорович</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="content__title">Главный технолог</div>
+                  <div class="content__text">Отвечает за материалы и разработку досок</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./images/avatars/olga.png" alt="olga" class="team__member-icon">
+              </div>
+              <button class="team__title" type="button">Ольга Невзорова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="content__title">Дизайнер</div>
+                  <div class="content__text">Создает дизайн серфбордов</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./images/avatars/ingwar.png" alt="ingwar" class="team__member-icon">
+              </div>
+              <button class="team__title" type="button">Ингвар Нильсон</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="content__title">Спортсмен</div>
+                  <div class="content__text">Учавствует в разработке серфбордов</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <div class="team__member">
+                <img src="./images/avatars/katya.png" alt="katya" class="team__member-icon">
+              </div>
+              <button class="team__title" type="button">Екатерина Иванова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="content__title">Тестировщик</div>
+                  <div class="content__text">Отвечает за разработку новых продуктов</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+          <!--mobile-->
+          <ul class="team team--version--mobile">
+            <li class="team__item">
+              <button class="team__title" type="button">Борис Федорович</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./images/avatars/borya.png" alt="borya" class="team__member-icon">
+                  </div>
+                  <div class="content__title">Главный технолог</div>
+                  <div class="content__text">Отвечает за материалы и разработку досок</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Ольга Невзорова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./images/avatars/olga.png" alt="olga" class="team__member-icon">
+                  </div>
+                  <div class="content__title">Дизайнер</div>
+                  <div class="content__text">Создает дизайн серфбордов</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Ингвар Нильсон</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./images/avatars/ingwar.png" alt="ingwar" class="team__member-icon">
+                  </div>
+                  <div class="content__title">Спортсмен</div>
+                  <div class="content__text">Учавствует в разработке серфбордов</div>
+                </div>
+              </div>
+            </li>
+            <li class="team__item">
+              <button class="team__title" type="button">Екатерина Иванова</button>
+              <div class="team__content">
+                <div class="team__content-block">
+                  <div class="team__member">
+                    <img src="./images/avatars/katya.png" alt="katya" class="team__member-icon">
+                  </div>
+                  <div class="content__title">Тестировщик</div>
+                  <div class="content__text">Отвечает за разработку новых продуктов</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
       <section class="section reviews-section">
         <div class="container">
           <h2 class="section__title section__review-title">Отзывы</h2>
           <div class="reviews">
             <div class="reviews__display">
-              <div class="reviews__display-inner">
-                <div class="reviews__avatar">
-                  <img src="./images/avatars/black-hair-girl.jpg" alt="black hair girl" class="reviews__avatar-img">
-                </div>
-                <article class="reviews__content">
-                  <h3 class="reviews__title">Лучший дизайн</h3>
-                  <div class="reviews__text">
-                    <p>
-                      Я увидела доски на сайте и влюбилась в их дизайн. К летнему сезону я заказала себе доску в SurfBoard. Дизайнер команды - волшебница! Она учла все мои предпочтения и комментарии. В итоге получился прекрасный дизайн. А я катаюсь на доске, которая мне нравится)
-                    </p>
+              <ul class="reviews__list">
+                <li class="reviews__item visible" data-linked-with="one">
+                  <div class="reviews__item-inner">
+                    <div class="reviews__avatar">
+                      <img src="./images/avatars/girl.png" alt="girl" class="reviews__avatar-img">
+                    </div>
+                    <article class="reviews__content">
+                      <h3 class="reviews__title">Лучший дизайн</h3>
+                      <div class="reviews__text">
+                        <p>
+                          Я увидела доски на сайте и влюбилась в их дизайн. К летнему сезону я заказала себе доску в SurfBoard. Дизайнер команды - волшебница! Она учла все мои предпочтения и комментарии. В итоге получился прекрасный дизайн. А я катаюсь на доске, которая мне нравится)
+                        </p>
+                      </div>
+                      <div class="reviews__name">Ольга Макарова</div>
+                    </article>
                   </div>
-                  <div class="reviews__name">Ольга Макарова</div>
-                </article>
-              </div>
+                </li>
+                <li class="reviews__item" data-linked-with="two">
+                  <div class="reviews__item-inner">
+                    <div class="reviews__avatar">
+                      <img src="./images/avatars/sprotsman.png" alt="sprotsman" class="reviews__avatar-img">
+                    </div>
+                    <article class="reviews__content">
+                      <h3 class="reviews__title">Нереальная скорость</h3>
+                      <div class="reviews__text">
+                        <p>
+                          Я занимаюсь профессиональным спортом. Доверил изготовление доски для соревнований ребятам из Surfboard и не пожалел: 1 место на соревнованиях. 
+                          Нереальная скорость, устойчивая, удобная и легкая: всё что нужно для победы на соревнованиях!
+                        </p>
+                      </div>
+                      <div class="reviews__name">Марк Брюлов</div>
+                    </article>
+                  </div>
+                </li>
+                <li class="reviews__item" data-linked-with="three">
+                  <div class="reviews__item-inner">
+                    <div class="reviews__avatar">
+                      <img src="./images/avatars/fatman.png" alt="fatman" class="reviews__avatar-img">
+                    </div>
+                    <article class="reviews__content">
+                      <h3 class="reviews__title">Устойчивость и безопасность</h3>
+                      <div class="reviews__text">
+                        <p>
+                          Я заказывал доски для своих детей. Мне было важно, чтобы они были устойчивые, так как безопасность детей на первом месте. Доски были изготовлены по индивидуальным замерам с учетом роста и веса каждого ребенка. Теперь дети катаются и им нравится!
+                        </p>
+                      </div>
+                      <div class="reviews__name">Василий Поперечный</div>
+                    </article>
+                  </div>
+                </li>
+              </ul>
             </div>
             <ul class="reviews__switcher">
-              <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
-                <a href="#" class="interactive__avatar-link">
-                  <img src="./images/avatars/black-hair-girl.jpg" alt="black hair girl" class="interactive__avatar-img">
+              <li class="reviews__switcher-item interactive-avatar active">
+                <a href="#" class="interactive__avatar-link" data-open="one">
+                  <img src="./images/avatars/girl.png" alt="black hair girl" class="interactive__avatar-img">
                 </a>
               </li>
               <li class="reviews__switcher-item interactive-avatar">
-                <a href="#" class="interactive__avatar-link">
-                  <img src="./images/avatars/black-hair-girl.jpg" alt="black hair girl" class="interactive__avatar-img">
+                <a href="#" class="interactive__avatar-link" data-open="two">
+                  <img src="./images/avatars/sprotsman.png" alt="sprotsman" class="interactive__avatar-img">
                 </a>
               </li>
               <li class="reviews__switcher-item interactive-avatar">
-                <a href="#" class="interactive__avatar-link">
-                  <img src="./images/avatars/black-hair-girl.jpg" alt="black hair girl" class="interactive__avatar-img">
+                <a href="#" class="interactive__avatar-link" data-open="three">
+                  <img src="./images/avatars/fatman.png" alt="fatman" class="interactive__avatar-img">
                 </a>
               </li>
             </ul>
@@ -424,6 +567,9 @@
       <li class="fixed-menu__item"> <a href="#" class="fixed-menu__link"> </a></li>
     </ul>
   </nav>
+  <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="./js/fullscreen-menu.js"></script>
+  <script src="./js/slideshow.js"></script>
+  <script src="./js/vertical-acco.js"></script>
 </body>
 </html>
