--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Surfboard</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
@@ -150,6 +152,234 @@
               </a>
             </div>
             <ul class="products">
+              <li class="products__item product">
+                <div class="product__container">
+                  <div class="product__col">
+                    <div class="image-wrapper">
+                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
+                    </div>
+                  </div>
+                  <div class="product__col">
+                    <div class="product__parameters">
+                      <div class="parameters-block">
+                        <a href="#" class="dropdown__link">Параметры</a>
+                        <div class="dropdown__menu">
+                          <ul class="dropdown__list">
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#left-right-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Длина доски</div>
+                              <div class="dropdown__item-value">от 2.5 м</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#diagonal-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Ширина доски</div>
+                              <div class="dropdown__item-value">от 40 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#thickness"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Толщина</div>
+                              <div class="dropdown__item-value">8 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#clock"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Срок службы</div>
+                              <div class="dropdown__item-value">5 лет</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#pud"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Вес</div>
+                              <div class="dropdown__item-value">7-8кг</div>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="product__title">Лонгборд 2.0</div>
+                    <div class="product__text">
+                      <p>
+                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
+                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
+                      </p>
+                    </div>
+                    <table class="product__values">
+                      <tr class="first-value">
+                        <td>Длина доски</td>
+                        <td class="second-col">Ширина доски</td>
+                      </tr>
+                      <tr class="second-value">
+                        <td>от 2,5 метров</td>
+                        <td class="second-col">от 40 сантиметров</td>
+                      </tr>
+                    </table>
+                    <div class="product__cost">
+                      <div class="cost-text">7000 ₽</div>
+                      <a href="#" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="products__item product">
+                <div class="product__container">
+                  <div class="product__col">
+                    <div class="image-wrapper">
+                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
+                    </div>
+                  </div>
+                  <div class="product__col">
+                    <div class="product__parameters">
+                      <div class="parameters-block">
+                        <a href="#" class="dropdown__link">Параметры</a>
+                        <div class="dropdown__menu">
+                          <ul class="dropdown__list">
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#left-right-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Длина доски</div>
+                              <div class="dropdown__item-value">от 2.5 м</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#diagonal-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Ширина доски</div>
+                              <div class="dropdown__item-value">от 40 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#thickness"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Толщина</div>
+                              <div class="dropdown__item-value">8 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#clock"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Срок службы</div>
+                              <div class="dropdown__item-value">5 лет</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#pud"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Вес</div>
+                              <div class="dropdown__item-value">7-8кг</div>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="product__title">Лонгборд 2.0</div>
+                    <div class="product__text">
+                      <p>
+                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
+                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
+                      </p>
+                    </div>
+                    <table class="product__values">
+                      <tr class="first-value">
+                        <td>Длина доски</td>
+                        <td class="second-col">Ширина доски</td>
+                      </tr>
+                      <tr class="second-value">
+                        <td>от 2,5 метров</td>
+                        <td class="second-col">от 40 сантиметров</td>
+                      </tr>
+                    </table>
+                    <div class="product__cost">
+                      <div class="cost-text">7000 ₽</div>
+                      <a href="#" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="products__item product">
+                <div class="product__container">
+                  <div class="product__col">
+                    <div class="image-wrapper">
+                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
+                    </div>
+                  </div>
+                  <div class="product__col">
+                    <div class="product__parameters">
+                      <div class="parameters-block">
+                        <a href="#" class="dropdown__link">Параметры</a>
+                        <div class="dropdown__menu">
+                          <ul class="dropdown__list">
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#left-right-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Длина доски</div>
+                              <div class="dropdown__item-value">от 2.5 м</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#diagonal-arrows"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Ширина доски</div>
+                              <div class="dropdown__item-value">от 40 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#thickness"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Толщина</div>
+                              <div class="dropdown__item-value">8 см</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#clock"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Срок службы</div>
+                              <div class="dropdown__item-value">5 лет</div>
+                            </li>
+                            <li class="dropdown__item">
+                              <svg class="dropdown__item-icon">
+                                <use xlink:href="./sprite.svg#pud"></use>
+                              </svg>
+                              <div class="dropdown__item-text">Вес</div>
+                              <div class="dropdown__item-value">7-8кг</div>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="product__title">Лонгборд 2.0</div>
+                    <div class="product__text">
+                      <p>
+                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
+                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
+                      </p>
+                    </div>
+                    <table class="product__values">
+                      <tr class="first-value">
+                        <td>Длина доски</td>
+                        <td class="second-col">Ширина доски</td>
+                      </tr>
+                      <tr class="second-value">
+                        <td>от 2,5 метров</td>
+                        <td class="second-col">от 40 сантиметров</td>
+                      </tr>
+                    </table>
+                    <div class="product__cost">
+                      <div class="cost-text">7000 ₽</div>
+                      <a href="#" class="btn product__btn">Заказать</a>
+                    </div>
+                  </div>
+                </div>
+              </li>
               <li class="products__item product">
                 <div class="product__container">
                   <div class="product__col">
@@ -554,6 +784,14 @@
       </ul>
     </nav>
   </div>
+  <div class="modal" id="modal">
+    <div class="modal__container">
+      <div class="modal__content">
+        <div class="modal__content-text">Сообщение отправлено</div>
+        <a href="#" id="btn" class="modal__content-btn btn">Закрыть</a>
+      </div>
+    </div>
+  </div>
   <nav class="fixed-menu">
     <ul class="fixed-menu__list">
       <li class="fixed-menu__item fixed-menu__item--active"> <a href="#" class="fixed-menu__link"> </a></li>
@@ -568,6 +806,10 @@
     </ul>
   </nav>
   <script src="./js/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script src="./js/modal.js"></script>
+  <script src="./js/slider.js"></script>
   <script src="./js/fullscreen-menu.js"></script>
   <script src="./js/slideshow.js"></script>
   <script src="./js/vertical-acco.js"></script>
