--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="product__container">
                   <div class="product__col">
                     <div class="image-wrapper">
-                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
+                      <img src="./images/slider/shortboard.png" alt="shortboard" class="product__image">
                     </div>
                   </div>
                   <div class="product__col">
@@ -246,14 +246,14 @@
                                 <use xlink:href="./sprite.svg#left-right-arrows"></use>
                               </svg>
                               <div class="dropdown__item-text">Длина доски</div>
-                              <div class="dropdown__item-value">от 2.5 м</div>
+                              <div class="dropdown__item-value">от 1.5 м</div>
                             </li>
                             <li class="dropdown__item">
                               <svg class="dropdown__item-icon">
                                 <use xlink:href="./sprite.svg#diagonal-arrows"></use>
                               </svg>
                               <div class="dropdown__item-text">Ширина доски</div>
-                              <div class="dropdown__item-value">от 40 см</div>
+                              <div class="dropdown__item-value">от 30 см</div>
                             </li>
                             <li class="dropdown__item">
                               <svg class="dropdown__item-icon">
@@ -280,11 +280,11 @@
                         </div>
                       </div>
                     </div>
-                    <div class="product__title">Лонгборд 2.0</div>
+                    <div class="product__title">ШОРТБОРД</div>
                     <div class="product__text">
                       <p>
-                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
-                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
+                        Самые быстрые доски для профессионалов. Размеры шортбордов позволяют быстро набирать скорость, делать различные трюки на волне, включая резкие повороты и развороты, флоатеры (проезды по самому гребню волны), различные прыжки с вращениями или без, а также катание 
+                        в трубах.
                       </p>
                     </div>
                     <table class="product__values">
@@ -293,164 +293,12 @@
                         <td class="second-col">Ширина доски</td>
                       </tr>
                       <tr class="second-value">
-                        <td>от 2,5 метров</td>
-                        <td class="second-col">от 40 сантиметров</td>
+                        <td>от 1,5 метров</td>
+                        <td class="second-col">от 30 сантиметров</td>
                       </tr>
                     </table>
                     <div class="product__cost">
-                      <div class="cost-text">7000 ₽</div>
-                      <a href="#" class="btn product__btn">Заказать</a>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="products__item product">
-                <div class="product__container">
-                  <div class="product__col">
-                    <div class="image-wrapper">
-                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
-                    </div>
-                  </div>
-                  <div class="product__col">
-                    <div class="product__parameters">
-                      <div class="parameters-block">
-                        <a href="#" class="dropdown__link">Параметры</a>
-                        <div class="dropdown__menu">
-                          <ul class="dropdown__list">
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#left-right-arrows"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Длина доски</div>
-                              <div class="dropdown__item-value">от 2.5 м</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#diagonal-arrows"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Ширина доски</div>
-                              <div class="dropdown__item-value">от 40 см</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#thickness"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Толщина</div>
-                              <div class="dropdown__item-value">8 см</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#clock"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Срок службы</div>
-                              <div class="dropdown__item-value">5 лет</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#pud"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Вес</div>
-                              <div class="dropdown__item-value">7-8кг</div>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="product__title">Лонгборд 2.0</div>
-                    <div class="product__text">
-                      <p>
-                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
-                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
-                      </p>
-                    </div>
-                    <table class="product__values">
-                      <tr class="first-value">
-                        <td>Длина доски</td>
-                        <td class="second-col">Ширина доски</td>
-                      </tr>
-                      <tr class="second-value">
-                        <td>от 2,5 метров</td>
-                        <td class="second-col">от 40 сантиметров</td>
-                      </tr>
-                    </table>
-                    <div class="product__cost">
-                      <div class="cost-text">7000 ₽</div>
-                      <a href="#" class="btn product__btn">Заказать</a>
-                    </div>
-                  </div>
-                </div>
-              </li>
-              <li class="products__item product">
-                <div class="product__container">
-                  <div class="product__col">
-                    <div class="image-wrapper">
-                      <img src="./images/slider/board-bg.png" alt="surfboard image" class="product__image">
-                    </div>
-                  </div>
-                  <div class="product__col">
-                    <div class="product__parameters">
-                      <div class="parameters-block">
-                        <a href="#" class="dropdown__link">Параметры</a>
-                        <div class="dropdown__menu">
-                          <ul class="dropdown__list">
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#left-right-arrows"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Длина доски</div>
-                              <div class="dropdown__item-value">от 2.5 м</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#diagonal-arrows"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Ширина доски</div>
-                              <div class="dropdown__item-value">от 40 см</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#thickness"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Толщина</div>
-                              <div class="dropdown__item-value">8 см</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#clock"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Срок службы</div>
-                              <div class="dropdown__item-value">5 лет</div>
-                            </li>
-                            <li class="dropdown__item">
-                              <svg class="dropdown__item-icon">
-                                <use xlink:href="./sprite.svg#pud"></use>
-                              </svg>
-                              <div class="dropdown__item-text">Вес</div>
-                              <div class="dropdown__item-value">7-8кг</div>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="product__title">Лонгборд 2.0</div>
-                    <div class="product__text">
-                      <p>
-                        Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать.
-                        Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.  
-                      </p>
-                    </div>
-                    <table class="product__values">
-                      <tr class="first-value">
-                        <td>Длина доски</td>
-                        <td class="second-col">Ширина доски</td>
-                      </tr>
-                      <tr class="second-value">
-                        <td>от 2,5 метров</td>
-                        <td class="second-col">от 40 сантиметров</td>
-                      </tr>
-                    </table>
-                    <div class="product__cost">
-                      <div class="cost-text">7000 ₽</div>
+                      <div class="cost-text">12000 ₽</div>
                       <a href="#" class="btn product__btn">Заказать</a>
                     </div>
                   </div>
