--- a/index.html
+++ b/index.html
@@ -414,6 +414,11 @@
           </ul>
         </div>
       </section>
+      <section class="section menu-section">
+        <div class="container">
+
+        </div>
+      </section>
       <section class="section reviews-section">
         <div class="container">
           <h2 class="section__title section__review-title">Отзывы</h2>
@@ -488,6 +493,29 @@
                 </a>
               </li>
             </ul>
+          </div>
+        </div>
+      </section>
+      <section class="section player-section">
+        <div class="container">
+          <h2 class="section__title">Как мы работаем</h2>
+          <div class="player-section__container">
+            <div class="player active">
+              <div class="player__wrapper">
+                <div class="player__elem" id="yt-player"></div>
+                <div class="player__splash"></div>
+              </div>
+              <div class="player__controls">
+                <button class="player__start"></button>
+                <div class="player__playback">
+                  <button class="player__playback-button"></button>
+                </div>
+                <div class="player__duration">
+                  <span class="player__duration-completed">0:00</span>
+                  <span class="player__duration-estimate">0:00</span>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
@@ -657,10 +685,12 @@
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script src="https://www.youtube.com/iframe_api"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/slider.js"></script>
   <script src="./js/fullscreen-menu.js"></script>
   <script src="./js/slideshow.js"></script>
   <script src="./js/vertical-acco.js"></script>
+  <script src="./js/player.js"></script>
 </body>
 </html>
