--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item"> <a href="#" class="menu__link">О нас </a> </li>
-                <li class="menu__item"> <a href="#" class="menu__link">Серфобры</a> </li>
+                <li class="menu__item"> <a href="#" class="menu__link">Серфборды</a> </li>
                 <li class="menu__item"> <a href="#" class="menu__link">Команда</a> </li>
                 <li class="menu__item"> <a href="#" class="menu__link">Меню</a> </li>
                 <li class="menu__item"> <a href="#" class="menu__link">Отзывы</a> </li>
