--- a/index.html
+++ b/index.html
@@ -605,6 +605,7 @@
         </div>
       </section>
       <section class="section map-section">
+        <div class="map" id="map"></div>
         <footer class="footer">  
           <div class="container footer__container">
             <address class="contacts">
@@ -695,6 +696,8 @@
   <script src="./js/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
   <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU"></script>
+  <script src="./js/map.js"></script>
   <script src="./js/modal.js"></script>
   <script src="./js/slider.js"></script>
   <script src="./js/fullscreen-menu.js"></script>
