--- a/index.html
+++ b/index.html
@@ -414,10 +414,52 @@
           </ul>
         </div>
       </section>
-      <section class="section menu-section">
-        <div class="container">
-
-        </div>
+      <section class="section products-menu-section">
+        <h2 class="section__title products-menu-section__title">Меню</h2>
+        <ul class="products-menu">
+          <li class="products-menu__item">
+            <a href="#" class="products-menu__title">
+                <img src="./images/menu/longboard.jpg" alt="longboard image" class="products-menu__image">
+                <div class="products-menu__text">Лонгборды</div>
+            </a>
+            <div class="products-menu__content">
+              <div class="products-menu__container">
+                <div class="products-menu__content-text">
+                  <p>Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать. Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="products-menu__item">
+            <a href class="products-menu__title">
+                <img src="./images/menu/shortboard.jpg" alt="longboard image" class="products-menu__image">
+                <div class="products-menu__text">Шортборды</div>
+            </a>
+            <div class="products-menu__content">
+              <div class="products-menu__container">
+                <div class="products-menu__content-text">
+                  <p>Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать. Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="products-menu__item">
+            <a href class="products-menu__title">
+                <img src="./images/menu/softtop.jpg" alt="longboard image" class="products-menu__image">
+                <div class="products-menu__text">Софттопы</div>
+            </a>
+            <div class="products-menu__content">
+              <div class="products-menu__container">
+                <div class="products-menu__content-text">
+                  <p>Устойчивая доска для новичков. На них легко лежать, сидеть, грести, разгребаться на волны и ехать. Размер и плавучесть доски позволяет брать очень маленькие и пологие волны и не спеша, не прилагая особых усилий ехать по ним.
+                  </p>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
       </section>
       <section class="section reviews-section">
         <div class="container">
@@ -703,6 +745,8 @@
   <script src="./js/fullscreen-menu.js"></script>
   <script src="./js/slideshow.js"></script>
   <script src="./js/vertical-acco.js"></script>
+  <script src="./js/inline-acco.js"></script>
   <script src="./js/video.js"></script>
+  <!-- <script src="./js/ops.js"></script> -->
 </body>
 </html>
